--- a/suppourt.html
+++ b/suppourt.html
@@ -66,10 +66,11 @@
 </html>
 <p class="text-center">Need help there is form. submit this form 
   if you need help.
-  
+</p>
+</div>
     <a href="https://forms.gle/VswWf5vbK3SrVsoN6">click here to submit the form.</a>
 
-  
+</div>  
 
 
 
