--- a/suppourt.html
+++ b/suppourt.html
@@ -43,7 +43,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="about.html">About us</a></li>
-            <li><a class="dropdown-item" href="#">History of this group.</a></li>
+            <li><a class="dropdown-item" href="#">My Account</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="register.html">Register/log 
             in</a></li>
