--- a/register.html
+++ b/register.html
@@ -80,8 +80,8 @@
   <a href="https://forms.gle/gD9eYrRHcb7YTvfYA"> REGISTER NOW.</a>
   </p>
 
-<p class="text-center">want to log in click in the log in button 
+<p class="text-center">want to log in click in the log in button </p>
      <div>
     <a href="https://forms.gle/8b5u93Q4wVRcDhcNA"> LOG IN NOW. 
     </a>
-   </p>
+     </div>
