--- a/register.html
+++ b/register.html
@@ -81,7 +81,8 @@
   </p>
 
 <p class="text-center">want to log in click in the log in button </p>
-     <div>
+    
+     <div class="grid text-center">
     <a href="https://forms.gle/8b5u93Q4wVRcDhcNA"> LOG IN NOW. 
     </a>
      </div>
