--- a/register.html
+++ b/register.html
@@ -86,3 +86,34 @@
     <a href="https://forms.gle/8b5u93Q4wVRcDhcNA"> LOG IN NOW. 
     </a>
      </div>
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Animated Registration</title>
+</head>
+<body>
+    <div class="registration-container">
+        <h1>log in</h1>
+        <form action="connect.php" method="post">
+          <input
+ type="text"
+placeholder="username">
+            <input   
+              type="password" placeholder="Password">
+            <button type="submit">log in</button>
+          <p>
+            Don't have an account make one
+          <a href="registertion.html">now</a>
+            <div>
+            <a
+              href="loading.html">load</a>
+            </div>
+          </p>  
+        </form>
+    </div>
+</body>
+
