--- a/register.html
+++ b/register.html
@@ -87,11 +87,9 @@
     </a>
      </div>
 
-    <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+ content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Animated Registration</title>
 </head>
