--- a/register.html
+++ b/register.html
@@ -89,8 +89,7 @@
 
 <head>
 
- content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.CSS">
     <title>Animated Registration</title>
 </head>
 <body>
