--- a/register.html
+++ b/register.html
@@ -89,7 +89,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="style.CSS">
+    <link rel="stylesheet" type="text/css" href="Style.CSS">
     <title>Animated Registration</title>
 </head>
 <body>
