--- a/register.html
+++ b/register.html
@@ -87,7 +87,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="Style.CSS">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css">
     <title>Animated Registration</title>
 </head>
 <body>
