--- a/register.html
+++ b/register.html
@@ -86,5 +86,5 @@
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
     <label class="form-check-label" for="exampleCheck1"I accept"</label>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type=submit" class="btn btn-primary">Submit</button>
 </form>
