--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
 </html>
 <div
 
-
+<div class="container d-flex justify icon tenth enter">
 <form>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
