--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
 </html>
 <div
 
-<div class="container min-vh-100 d-flex justify icon tenth enter">
+<div class="container min-vh-100 d-flex justify icon tenth enter aling-items-center">
 <form>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
