--- a/register.html
+++ b/register.html
@@ -81,3 +81,5 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<a href="registration.html">Register now!</a>
