--- a/registration.html
+++ b/registration.html
@@ -65,6 +65,9 @@
       </header>
 
 
+<div class="container d-flex justify-content-center">
+
+
 <form>
   <div class="form-row">
     <div class="col-md-4 mb-3">
