--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="about.html">About us</a></li>
-            <li><a class="dropdown-item" href="myaccount.html"Event</a></li>
+            <li><a class="dropdown-item" href="veryfie.php>veryfie your email</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="register.html">Register/log 
             in</a></li>
