--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a href= >click NEWS </a>
         </li>
       </ul>
       <form class="d-flex" role="search">
