--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a href= >click NEWS </a>
+          <a herf="news.html">NEWS</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
