--- a/news.html
+++ b/news.html
@@ -38,7 +38,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a href="news.html" class="nav-link">NEWS</a>
+                        <li <a href="news.html">Link to news</a>
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
