--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a herf="news.html">NEWS</a>
+        <li><a herf="news.html">NEWS</a></li>
         </li>
       </ul>
       <form class="d-flex" role="search">
