--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             in</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-        <li><a herf="news.html">NEWS</a></li>
+        <li class="nav-item">/li>
         </li>
       </ul>
       <form class="d-flex" role="search">
@@ -96,3 +95,5 @@
 <p style="font-size: 20px;" class="text-center"> Welcome to ALG Alam's Library is a place full of fun! It is full of creativity and brainstorming. There are places to travel and to explore. Each day comes with excitement. There are many celebrations that occur frequently. Such as food festivals, certain holidays, or even birthdays!
  There are ups and downs but everyone get through it as a family
 Joining AL would be the best decision for anyone, if you are ever feeling down, there is always someone available in the group that will always find a way to brighten up your day!</p>
+
+        <a herf="news.html">NEWS</a>
