--- a/index.html
+++ b/index.html
@@ -1,98 +1,123 @@
 <!DOCTYPE html>
-<html lang="eng" dir="ltr">
-  <head>
+<html lang="en">
 
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css" integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
     <title>ALG lIBRARY</title>
-  </head>
-  <body>
-    <h1></h1>
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="position: fixed;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Welcome!</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="suppourt.html">Need help!</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                About section
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="about.html">About us</a></li>
+                                <li><a class="dropdown-item" href="verify.php">Verify your email</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="register.html">Register/log in</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="news.html" class="nav-link">NEWS</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Your newspaper content goes here -->
+    <h1>News Title</h1>
+    <p>This is a sample news article. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+</body>    <style>
+      /* Add your custom styles for the newspaper content here */
+      body {
+          margin: 20px;
+          padding: 20px;
+      }
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
-    -->
-    <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" position="fixed">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Welcome!</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="suppourt.html">Need help!</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            About section
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="about.html">About us</a></li>
-            <li><a class="dropdown-item" href="veryfie.php">veryfie your email</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="register.html">Register/log 
-            in</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">/li>
-      </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria- 
-        label="search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </div>
-</nav>
-      </header>
-   
+      section {
+          display: flex;
+          justify-content: space-between;
+          flex-wrap: wrap;
+      }
+
+      article {
+          flex: 0 0 48%;
+          margin-bottom: 20px;
+          border: 1px solid #ddd;
+          padding: 10px;
+          box-sizing: border-box;
+      }
+
+      footer {
+          text-align: center;
+          padding: 10px;
+          background-color: #333;
+          color: white;
+          position: fixed;
+          width: 100%;
+          bottom: 0;
+      }
+  </style>
+  <!-- Newspaper Content Section -->
+  <section>
+      <article>
+          <h2>Headline 1</h2>
+          <p>Some content for the first article. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </article>
+
+      <article>
+          <h2>Headline 2</h2>
+          <p>Some content for the second article. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </article>
+
+      <article>
+          <h2>Headline 3</h2>
+          <p>Some content for the third article. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </article>
+
+      <article>
+          <h2>Headline 4</h2>
+          <p>Some content for the fourth article. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      </article>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+      <p>&copy; 2024 My Newspaper. All rights reserved.</p>
+  </footer>
+
+  <!-- Optional JavaScript; choose one of the two! -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
-</html>
-<p class="text-center">Welcome to A.L.G website.</p>
+  </html>
 
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="5231.webp" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="1640615941962.jpeg" class="d-block w-100" 
-      alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="shutterstock_35365912-1-1200x720.jpg" class="d- 
-     block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-</div>
-<div></div>
-<p style="font-size: 20px;" class="text-center"> Welcome to ALG Alam's Library is a place full of fun! It is full of creativity and brainstorming. There are places to travel and to explore. Each day comes with excitement. There are many celebrations that occur frequently. Such as food festivals, certain holidays, or even birthdays!
- There are ups and downs but everyone get through it as a family
-Joining AL would be the best decision for anyone, if you are ever feeling down, there is always someone available in the group that will always find a way to brighten up your day!</p>
-
-        <a herf="news.html">NEWS</a>
+<a href="news.html">Link to news.html</a>
