--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a herf="news.html">NEWS</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
