--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             <li><a class="dropdown-item" href="about.html">About us</a></li>
             <li><a class="dropdown-item" href="#">My Account</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="register.html">Register/log 
+            <li><a class="dropdown-item" href="register.html">Register/log</a></li> 
+            <li><a class="dropdown-item" href="news.html">NEWS</a></li> 
             in</a></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <a herf="news.html">NEWS</a>
+      
         </li>
       </ul>
       <form class="d-flex" role="search">
