--- a/news.html
+++ b/news.html
@@ -1,66 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <!-- Required meta tags -->
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.rtl.min.css" integrity="sha384-T5m5WERuXcjgzF8DAb7tRkByEZQGcpraRTinjpywg37AO96WoYN9+hrhDVoM6CaT" crossorigin="anonymous">
-    <title>ALG lIBRARY</title>
-</head>
-
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="position: fixed;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Welcome!</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="suppourt.html">Need help!</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                About section
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="about.html">About us</a></li>
-                                <li><a class="dropdown-item" href="verify.php">Verify your email</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="register.html">Register/log in</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                        <li <a href="news.html">Link to news</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <!-- Your newspaper content goes here -->
-    <h1>News Title</h1>
-    <p>This is a sample news article. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>    <style>
-      /* Add your custom styles for the newspaper content here */
+    <title>Newspaper Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <style>
       body {
-          margin: 20px;
-          padding: 20px;
+          margin: 0; /* Resetting the default margin */
+      }
+
+      h1 {
+          margin-top: 0; /* Removing the margin from the h1 element */
       }
 
       section {
@@ -86,9 +37,12 @@
           width: 100%;
           bottom: 0;
       }
-  </style>
-  <!-- Newspaper Content Section -->
-  <section>
+    </style>
+  </head>
+  <body>
+    <h1>News Title</h1>
+
+    <section>
       <article>
           <h2>Headline 1</h2>
           <p>Some content for the first article. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -108,16 +62,12 @@
           <h2>Headline 4</h2>
           <p>Some content for the fourth article. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </article>
-  </section>
+    </section>
 
-  <!-- Footer Section -->
-  <footer>
+    <footer>
       <p>&copy; 2024 My Newspaper. All rights reserved.</p>
-  </footer>
+    </footer>
 
-  <!-- Optional JavaScript; choose one of the two! -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
-  </html>
-
-
+</html>
