--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
   <img src="WhatsApp Image 2023-07-29 at 1.08.32 PM.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">FAIEZA NAZRIM</h5>
-    <p class="card-text"></p>
+    <p class="card-text">Her job is to keep records of all books that are borrowed from the library. She is also good at cooking. If you want to know any cooking tips or recipes just contact to her.</p>
    
   </div>
   </body>
