--- a/index.html
+++ b/index.html
@@ -106,3 +106,5 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js"></script>
